added card, finetuning

--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@
       </div>
     </div>
   </div>
+  <div class="cta-overlay">
+  <div class="cta-overlay-body">
+      <a class="btn btn-cta-wm btn-cta" href="#" role="button">Word maatje</a>
+      <a class="btn btn-cta-dn btn-cta" href="#" role="button">Doneren</a>
+      <h5 class="text-center mt-5 mb-4">WERK SAMEN MET ONS</h5>
+      <a class="btn btn-cta-wp btn-cta" href="#" role="button">Word partner</a>
+  </div>
+  <div class="cta-footer">
+    <p>Volg ons</p>
+    <ul class="cta-social">
+      <a class="cta-social-link" href="#"><li><i class="fab fa-facebook-f fa-lg"></i></li></a>
+      <a class="cta-social-link" href="#"><li><i class="fab fa-twitter fa-lg"></i></li></a>
+      <a class="cta-social-link" href="#"><li><i class="fab fa-linkedin-in fa-lg"></i></li></a>
+    </ul>
+  </div>
+</div>
+
   <div class="jumbotron-text-overlay d-block d-md-none">
     <div class="container">
       <h2 class="jumbotron-header">Samen lukt 't</h2>
@@ -143,16 +160,19 @@
 
   <!-- Lead -->
   <div class="main-lead">
-    <div class="container-small">
-      <h3 class="main-lead-display">Zelfredzaamheid is het doel van SchuldHulpMaatje. Mensen zullen zelf weer de regie moeten kunnen nemen over hun financiele situatie.
-      </h3>
-      <p class="main-lead-paragraph">
-      SchuldHulpMaatje komt achter de voordeur omdat schulden niet alleen met geld te maken hebben.</p>
-      <p class="main-lead-paragraph">
-      Schuldenlast veroorzaakt stress. Dit kan leiden tot depressie, angst, relatieproblemen, ziekteverzuim en sociaal isolement. Zo hebben mensen in schulden niet alleen geld nodig, maar ook sociale steun en begeleiding bij het regelen van hun financiën.</p>
-      <p class="main-lead-paragraph">
-      Met persoonlijk aandacht en deskundigheid staan de vrijwilligers van SchuldHulpMaatje Den Haag naast Hagenaars met schulden.</p>
-      <a class="btn btn-primary btn-sm ml-auto mr-auto" href="#" role="button">Meer weten</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-8 col-lg-7">
+          <h3 class="main-lead-display">Zelfredzaamheid is het doel van SchuldHulpMaatje. Mensen zullen zelf weer de regie moeten kunnen nemen over hun financiele situatie.
+          </h3>
+          <p class="main-lead-paragraph">
+          SchuldHulpMaatje komt achter de voordeur omdat schulden niet alleen met geld te maken hebben.</p>
+          <p class="main-lead-paragraph">
+          Schuldenlast veroorzaakt stress. Dit kan leiden tot depressie, angst, relatieproblemen, ziekteverzuim en sociaal isolement. Zo hebben mensen in schulden niet alleen geld nodig, maar ook sociale steun en begeleiding bij het regelen van hun financiën.</p>
+          <p class="main-lead-paragraph">
+          Met persoonlijk aandacht en deskundigheid staan de vrijwilligers van SchuldHulpMaatje Den Haag naast Hagenaars met schulden.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -175,7 +195,7 @@
                   </div>
               </div>
               <div class="right col-md-6 clearfix">
-               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xy3GlrddZFI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/r8eFlBiBDWE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
           </div>
       </div>
@@ -185,8 +205,35 @@
   <div id="testimonials">
     <div class="container">
       <h2 class="text-center">Wij willen een bijdrage aan de samenleving leveren en dat doen we uit medemenselijkheid.</h2>
+      <div class="card-deck">
+        <div class="card card-testimonial d-block">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card card-testimonial d-block">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card card-testimonial d-none d-md-block">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    Test
+  </footer>
 
 
   <!-- Optional JavaScript -->
